--- a/slider/index.html
+++ b/slider/index.html
@@ -4,19 +4,19 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <title>Slider</title>
 </head>
 <body>
     <div class="big_container">
         <div id="carousel">
             <ul>
-                <li><img src="http://via.placeholder.com/400x400?text=1"></li>
-                <li><img src="http://via.placeholder.com/400x400?text=2"></li>
-                <li><img src="http://via.placeholder.com/400x400?text=3"></li>
-                <li><img src="http://via.placeholder.com/400x400?text=4"></li>
-                <li><img src="http://via.placeholder.com/400x400?text=5"></li>
-                <li><img src="http://via.placeholder.com/400x400?text=6"></li>
+                <li><img src="http://via.placeholder.com/400x400?text=1" height="400" width="400"></li>
+                <li><img src="http://via.placeholder.com/400x400?text=2" height="400" width="400"></li>
+                <li><img src="http://via.placeholder.com/400x400?text=3" height="400" width="400"></li>
+                <li><img src="http://via.placeholder.com/400x400?text=4"  height="400" width="400"></li>
+                <li><img src="http://via.placeholder.com/400x400?text=5" height="400" width="400"></li>
+                <li><img src="http://via.placeholder.com/400x400?text=6" height="400" width="400"></li>
             </ul>
         </div>
         <div class="text-center">
